--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="header-top">
-      <img class="logo" src="img/logo.png">
+      <img class="logo" src="sass/img/logo.png">
       <ul class="info">
         <li class="active">Card</li>
         <li>News</li>
@@ -31,32 +31,32 @@
   <div class="underline"></div>
   <div class="cardflex">
     <div class="card">
-      <img src="img/card-img-1.svg" alt="">
+      <img src="sass/img/card-img-1.svg" alt="">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img-1.svg" alt="">
+      <img src="sass/img/card-img-1.svg" alt="">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img-1.svg" alt="">
+      <img src="sass/img/card-img-1.svg" alt="">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img-1.svg" alt="">
+      <img src="sass/img/card-img-1.svg" alt="">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img-1.svg" alt="">
+      <img src="sass/img/card-img-1.svg" alt="">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img-1.svg" alt="">
+      <img src="sass/img/card-img-1.svg" alt="">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
