--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Daytora2nd</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="sass/styles.css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans+JP:400,700&display=swap" rel="stylesheet">
@@ -34,32 +34,32 @@
   <div class="underline"></div>
   <div class="cardflex">
     <div class="card">
-      <img src="img/card-img.svg" alt="">
+      <img src="img/card-img.svg" alt="card-img">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img.svg" alt="">
+      <img src="img/card-img.svg" alt="card-img">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img.svg" alt="">
+      <img src="img/card-img.svg" alt="card-img">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img.svg" alt="">
+      <img src="img/card-img.svg" alt="card-img">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img.svg" alt="">
+      <img src="img/card-img.svg" alt="card-img">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
     <div class="card">
-      <img src="img/card-img.svg" alt="">
+      <img src="img/card-img.svg" alt="card-img">
       <h5>タイトルタイトル</h5>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
@@ -123,7 +123,7 @@
   <h1>Price</h1>
   <div class="underline"></div>
   <div class="container">
-  <img src="img/price-img.png" alt="">
+  <img src="img/price-img.png" alt="priceman">
   <div class="pricemap">
     <table>
       <tr>
@@ -223,7 +223,7 @@
 <footer>
   <div class="footer-container">
   <div class="footerleft">
-    <img src="img/logo.png" alt="">
+    <img src="img/logo.png" alt="logo">
     <p>住所：ほげほげのほげほげ</p>
     <p>TEL：0000-00-0000</p>
   </div>
@@ -237,13 +237,13 @@
     </ul>
   </div>
   <div class="footerright">
-    <img src="img/twitter.svg" alt="">
-    <img src="img/facebook.svg" alt="">
-    <img src="img/instagram.svg" alt="">
+    <img src="img/twitter.svg" alt="twitter-img">
+    <img src="img/facebook.svg" alt="facebook-img">
+    <img src="img/instagram.svg" alt="instagram-img">
   </div>
 </div>
 <div class="go-top">
-  <img src="img/totop.svg" alt="">
+  <img src="img/totop.svg" alt="top-img">
 </div>
 <div class="copywite">
   <p>Copyright © 2018 @haniwa008 All rights reserved.</p>
