--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </ul>
       </div>
     </div>
-    <div class="header-top">
+    <div class="header-top" id="header">
       <img class="logo" src="img/logo.png" alt="logo">
       <ul class="info">
-        <li class="active"><a href="#card">Card</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#price">Price</a></li>
-        <li><a href="#map">Access</a></li>
-        <li><a href="#form">Contact</a></li>
+        <li class="infolist"><a href="#card">Card</a></li>
+        <li class="infolist"><a href="#news">News</a></li>
+        <li class="infolist"><a href="#price">Price</a></li>
+        <li class="infolist"> <a href="#map">Access</a></li>
+        <li class="infolist"><a href="#form">Contact</a></li>
       </ul>
       <a><i class="fas drawer-show fa-bars"></i></a>
    </div>
@@ -48,7 +48,7 @@
         <div class="text">
         <h1>一番伝えたいことを書く</h1>
         <h3>リードリードリード</h3>
-        <div class="info-btn">お問い合わせ</div>
+        <div class="info-btn"><a calss="linkform" href="#form">お問い合わせ</a></div>
        </div>
       </div>
       <div class="swiper-slide" style="background-image: url(img/pc1.jpg);"></div>
@@ -205,6 +205,53 @@
   </div>
 </section>
 
+<section class="accordion">
+  <h2>Q & A</h2>
+  <div class="underline"></div>
+    <ul class="faq-list">
+      <li  class="faq-list-item">
+        <div class="item-top">
+          <h3 class="questhion"><span>Q</span>クリックするとどうなりますか？</h3>
+          <span class="purase">+</span>
+        </div>
+        <div class="answer">
+            <span class="biga">A</span>
+            <p>アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。</p>
+        </div>
+      </li>
+
+      <li class="faq-list-item">
+        <div class="item-top">
+          <h3 class="questhion"><span>Q</span>クリックするとどうなりますか？</h3>
+          <span class="purase">+</span>
+          </div>
+        <div class="answer">
+        <span class="biga">A</span><p>アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。</p>
+        </div>
+      </li>
+
+      <li class="faq-list-item">
+        <div class="item-top">
+          <h3 class="questhion"><span>Q</span>クリックするとどうなりますか？</h3>
+          <span class="purase">+</span>
+          </div>
+        <div class="answer">
+        <span class="biga">A</span><p>アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。</p>
+        </div>
+      </li>
+      <li class="faq-list-item">
+        <div class="item-top">
+          <h3 class="questhion"><span>Q</span>クリックするとどうなりますか？</h3>
+          <span class="purase">+</span>
+          </div>
+        <div class="answer">
+        <span class="biga">A</span><p>アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。アコーディオンでここが開きます。</p>
+        </div>
+      </li>
+    </ul>
+
+</section>
+
 <section class="form" id="form">
   <h2>Contact</h2>
   <div class="underline"></div>
@@ -243,11 +290,27 @@
   <label><input name="radio" type="radio">ラジオ2</label> 
   <label><input name="radio" type="radio">ラジオ3</label> 
   </div>
-
   <div class="check">
-  <label><input type="checkbox"></label>
-  <p><a>プライバシーポリシー</a>に合意する</p> 
+    <label><input type="checkbox"></label>
+    <p><a  id="privace" style="color: black;" href="#header">プライバシーポリシー</a>に合意する</p> 
+   </div>
+<div class="mordalwrapper">
+ <div class="mordal">
+   <div class="mordal-close close-m"><img class="close-blue" src="img/btn-batsu.svg"></div>
+   <h3>プライバシーポリシー</h3>
+   <div class="underline"></div>
+   <div class="mordal-text">
+     <span>|</span><h4>ほにゃらら</h4>
+     <p>ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら。</p>
+   </div>
+   <div class="mordal-text">
+     <span>|</span><h4>ほにゃらら</h4>
+     <p>ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら。</p>
+   </div>
+     <div class="close-m"><a class="mordal-close-btn">閉じる</a>
+     </div>
  </div>
+</div>
 
   <a href=" " class="google-btn">送信する<i class="fas fa-chevron-right"></i></a>
   </div>
@@ -284,6 +347,6 @@
 </footer>
 
 
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
